# ws-logger

./: Cargo.toml  LICENSE  README.md
main/: Cargo.toml
main/src/: lib.rs  protobuf_model.rs
simple_test/: Cargo.toml
simple_test/src/: main.rs
