[package]
edition = "2018"
name = "ws-logger"
version = "0.1.0"

[dependencies]
async-std = "1"
async-tungstenite = {version = "0.14", features = ["async-std-runtime"]}
atty = "0.2"
chrono = "0.4"
futures = "0.3"
hostname = "0.3"
lazy_static = "1.4"
log = {version = "0.4", features = ["std"]}
prost = "0.8"
regex = "1.5"
url = "2"
